tg_parser/tests/invalid/invalid5_top_level_instance_label.tg
gate NAND2(in a, b; out y) {
    node n;
    pmos drain=n, gate=a, source=VDD;
    pmos drain=y, gate=b, source=n;
    nmos drain=y, gate=a, source=GND;
    nmos drain=y, gate=b, source=GND;
}

NAND2 myGate(0, 1);
